--- a/WebApp/Pages/_Host.cshtml
+++ b/WebApp/Pages/_Host.cshtml
@@ -26,7 +26,9 @@ integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4
 <link href="https://fonts.googleapis.com/css2?family=Literata:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="">
     <component type="typeof(App)" render-mode="ServerPrerendered" />
+    </div>
 
     <div id="blazor-error-ui">
         <environment include="Staging,Production">
