--- a/WebApp/Pages/_Host.cshtml
+++ b/WebApp/Pages/_Host.cshtml
@@ -24,6 +24,10 @@ integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Literata:wght@400;500&display=swap" rel="stylesheet">
+
+<link rel="stylesheet" href="_content/Radzen.Blazor/css/default-base.css">
+<link rel="stylesheet" href="_content/Radzen.Blazor/css/default.css">
+<script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
 </head>
 <body>
     <div class="">
