--- a/WebApp/Pages/OrderCustomer/OrderCustomerComponent.razor
+++ b/WebApp/Pages/OrderCustomer/OrderCustomerComponent.razor
@@ -1,4 +1,4 @@
-﻿@page "/ordercustomers"
+﻿@page "/ordercustomers/"
 
 @inject NavigationManager NavigationManager
 @inject IViewOrderCustomersUseCase ViewOrderCustomersUseCase
