--- a/WebApp/Components/ButtonAddComponent.razor
+++ b/WebApp/Components/ButtonAddComponent.razor
@@ -1,6 +1,6 @@
 ﻿@inject NavigationManager NavigationManager
 
-<button tupe="button" @onclick="@(() => OnClickAdd())" class="btn btn-link" style="float:left;">
+<button tupe="button" @onclick="@(() => OnClickAdd())" class="btn btn-link" style="float:left;" title="Добавить">
     <i class="fas fa-plus-square"></i> @Text
 </button>
 
